--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,3 +4,17 @@
 .logo{
     height: 50px;
 }
+
+.header nav{
+    background-color: black;
+}
+.header nav a{
+    text-decoration: none;
+    color: white;
+    margin-right: 20px;
+    padding: 5px;
+    font-size: 20px;
+}
+.header nav a:hover{
+    background-color: lightgray;
+}
