--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -8,5 +8,6 @@
 }
 .product-container{
     border-right: 1px solid lightgray;
-    margin-left: 0;
+    margin-left: 50px;
+    margin-right: 5px;
 }
