--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,3 +1,8 @@
 .product{
     display: flex;
+    border-bottom: 1px solid lightslategrey;
+}
+.product-name{
+    color: blue;
+    font-weight: 400;
 }
