--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -11,3 +11,9 @@
     font-weight: 400;
 }
 
+.btn-regular{
+    background-color: goldenrod;
+    width: 150px;
+    height: 30px;
+    border: 1px solid lightslategrey;
+}
